# arm_gemm

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
include/: arm_gemm.hpp
src/: ocl.cpp  omp_neon_gemm.cpp
